--- a/index-Hackaton2022HTML.html
+++ b/index-Hackaton2022HTML.html
@@ -13,8 +13,8 @@
         <nav class="active">
             <label class="logo">DailyAssiT</label>
             <ul>
-                <li><a href=""><b>Sign IN!</b></a></li>
-                <li><a href=""><b>Log IN!</b></a></li>
+                <li><a href="signin.html"><b>Sign IN!</b></a></li>
+                <li><a href="logon.html"><b>Log IN!</b></a></li>
                 <li><a href=""><b>Email Us!</b></a></li>
                 <li><a href="Feedback.html"><b>Feeback us!</b> </a></li>
                 <li><a href="" id="amazeidea"><b>Use Chat Robot!</b></a></li>
